# LinuxChat

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRACT.md  DESIGN.md  LinuxChat_架构图.drawio  PRESENTATION.md  README.md  TODO.md  design-c-motion.html  mkdirs.py  prototype.html  test_connection.py  test_connection2.py  test_protocol.py
.superpowers/brainstorm/20260617-100511/content/: design-overview.html
.superpowers/brainstorm/20260617-100511/state/: server-info
build_client/linuxchat_client_autogen/: deps  mocs_compilation.cpp
build_client/linuxchat_client_autogen/6YEA5652QU/: moc_chat_backend.cpp.d  moc_chat_client.cpp.d  moc_login_controller.cpp.d  moc_message_model.cpp.d  moc_session_model.cpp.d  moc_theme_manager.cpp.d  moc_user_model.cpp.d
client/: CMakeLists.txt  main.cpp
client/include/: chat_backend.h  chat_client.h  chat_view.h  font_manager.h  login_controller.h  login_dialog.h  main_window.h  message_model.h  session_model.h  theme_manager.h  user_model.h
client/qml/: main.qml  test_direct.qml
client/qml/animations/: BounceAnimation.qml  PulseAnimation.qml  SpringEntrance.qml
client/qml/components/: ChatHeader.qml  CustomTitleBar.qml  InputArea.qml  LCAvatar.qml  LCButton.qml  LCTextField.qml  LoginBackground.qml  MessageBubble.qml  SessionTabItem.qml  SettingsPopup.qml  Sidebar.qml  TimeSeparator.qml  UserListItem.qml  qmldir
client/qml/styles/: Dense.qml  Minimal.qml  Motion.qml  Theme.qml  iMessage.qml
client/qml/views/: ChatWindow.qml  LoginDialog.qml
client/resources/: resources.qrc  style.qss
client/src/: chat_backend.cpp  chat_client.cpp  chat_view.cpp  font_manager.cpp  login_controller.cpp  login_dialog.cpp  main_window.cpp  message_model.cpp  session_model.cpp  theme_manager.cpp  user_model.cpp
docs/: INDEX.md  JOURNAL.md  protocol.md
docs/archive/: architecture-audit-2026-06-19.md  connection-bug-analysis-2026-06-19.md  final-fix-report-2026-06-19.md  p0-review-2026-06-19.md  post-fix-review-2026-06-19.md  third-round-analysis-2026-06-19.md
docs/designs/: 2026-06-17-qss-chat-redesign.md  design-a-minimal.html  design-b-dense.html  design-d-imessage.html
docs/issues/: 01-qml-infrastructure.md  02-qml-login.md  03-qml-chat.md  04-qml-animations-skins.md  05-qml-cleanup.md
docs/legacy/: ARCHITECTURE.legacy.md  TODO.legacy.md
docs/prompts/: PROMPT-INDEX.md
docs/specs/: blueprint.md  prd.md  qml-migration-prd.md
docs/superpowers/plans/: 2026-06-16-bottle-messenger-ui-redesign.md
docs/superpowers/specs/: 2026-06-16-bottle-messenger-ui-design.md
server/: CMakeLists.txt  main.cpp
server/include/: client_session.h  crypto_utils.h  database.h  epoll_server.h  log_utils.h  message_router.h  protocol.h  thread_pool.h
server/src/: database.cpp  epoll_server.cpp  message_router.cpp  protocol.cpp  thread_pool.cpp
tests/: CMakeLists.txt  CMakeLists_win.txt  test_client_win.cpp  test_crypto.cpp  test_database.cpp  test_message_handler.cpp  test_message_router.cpp  test_protocol.cpp  test_thread_pool.cpp
